--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -48,10 +48,13 @@
  austro_hungarian_empire_nation_title: "@AHE The Austro-Hungarian Empire"
  austro_hungarian_empire_nation_desc: "Austria-Hungary, often referred to as the Austro-Hungarian Empire or the Dual Monarchy, was a constitutional monarchy in Central and Eastern Europe between 1867 and 1918.\n\nIt was formed when the Austrian Empire adopted a new constitution; as a result Austria and Hungary were placed on equal footing.\n\nThe Austro-Hungarian Empire was dissolved into several new states at the end of the First World War." 
 
+ balkan_league_nation_title: "@BKL The Balkan League"
+ balkan_league_nation_desc: ""
+
  baltic_union_nation_title: "@BTC The Baltic Union"
  baltic_union_nation_desc: "The United Baltic Duchy, also known as the Grand Duchy of Livonia, was a state proposed by the Baltic German nobility and exiled Russian nobility after the Russian Revolution and German occupation of the Courland, Livonian, and Estonian governorates of the Russian Empire."
 
- basque_country_nation_title: "@BSQ The Basque Kingdom"
+ basque_country_nation_title: "@BSQ The Basque Country"
  basque_country_nation_desc: "The Basque Country is the name given to the home of the Basque people. the Basque country is located in the western Pyrenees, straddling the border between France and Spain on the coast of the Bay of Biscay. Euskal Herria is the oldest documented Basque name for the area they inhabit, dating from the 16th century." 
 
  belgium_nation_title: "@BEL Unite the Belgians"
