--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -211,18 +211,18 @@
  BSQ_strengthen_the_army_desc: "§RDescription Available in 4.1.0§!"
  BSQ_recruitment_drive_for_mercs: "Recruitment Drive for Merceneries"
  BSQ_recruitment_drive_for_mercs_desc: "§RDescription Available in 4.1.0§!"
- BSQ_slave_trade_power: "Slave Trade Economic Power"
+ BSQ_slave_trade_power: "Slave Trade Power"
  BSQ_slave_trade_power_desc: "§RDescription Available in 4.1.0§!"
  BSQ_national_desire_for_expansion: "National Desire for Expansion"
  BSQ_national_desire_for_expansion_desc: "§RDescription Available in 4.1.0§!"
  BSQ_technological_warfare: "Technological Warfare"
  BSQ_technological_warfare_desc: "§RDescription Available in 4.1.0§!"
- BSQ_tax_the_middle_classes: "Tax the Middle Classes"
+ BSQ_tax_the_middle_classes: "Tax the Middles Classes"
  BSQ_tax_the_middle_classes_desc: "§RDescription Available in 4.1.0§!"
 
  BEL_ideas: "Belgium Ideas"
  BEL_ideas_start: "Belgium Traditions"
- BEL_ideas_bonus: "Belgian Power"
+ BEL_ideas_bonus: "Belgian Lust"
  BEL_protestant_lands: "Protestant Lands"
  BEL_protestant_lands_desc: "§RDescription Available in 4.1.0§!"
  BEL_proper_military_reform: "Proper Military Reforms"
@@ -231,12 +231,102 @@
  BEL_congo_exploration_desc: "§RDescription Available in 4.1.0§!"
  BEL_belgian_advisors: "Belgian Advisors"
  BEL_belgian_advisors_desc: "§RDescription Available in 4.1.0§!"
- BEL_low_countries_economy: "Low Countries Economy"
+ BEL_low_countries_economy: "Low Countries"
  BEL_low_countries_economy_desc: "§RDescription Available in 4.1.0§!"
  BEL_reduced_economic_costs: "Reduced Economic Costs"
  BEL_reduced_economic_costs_desc: "§RDescription Available in 4.1.0§!"
  BEL_the_belgian_power: "The Belgian Power"
  BEL_the_belgian_power_desc: "§RDescription Available in 4.1.0§!"
+
+ BSK_ideas: "Bosnia-Serbia Ideas"
+ BSK_ideas_start: "Bosnia-Serbia Traditions"
+ BSK_ideas_bonus: "The United Balkans"
+ BSK_bosnian_spirit: "Bosnian Spirits"
+ BSK_bosnian_spirit_desc: "§RDescription Available in 4.1.0§!"
+ BSK_new_policy_reforms: "New Policy Reforms"
+ BSK_new_policy_reforms_desc: "§RDescription Available in 4.1.0§!"
+ BSK_prestigious_leadership: "Prestigious Leadership"
+ BSK_prestigious_leadership_desc: "§RDescription Available in 4.1.0§!"
+ BSK_turkish_immigrants: "Turkish Immigrants"
+ BSK_turkish_immigrants_desc: "§RDescription Available in 4.1.0§!"
+ BSK_embrace_new_institutions: "Embrace New Institutions"
+ BSK_embrace_new_institutions_desc: "§RDescription Available in 4.1.0§!"
+ BSK_naval_preparations: "Naval Preparations"
+ BSK_naval_preparations_desc: "§RDescription Available in 4.1.0§!"
+ BSK_cavalry_improvments: "Cavalry Improvements"
+ BSK_cavalry_improvments_desc: "§RDescription Available in 4.1.0§!"
+
+ BRP_ideas: "Brandenburg-Prussia Ideas"
+ BRP_ideas_start: "Brandenburg-Prussia Traditions"
+ BRP_ideas_bonus: "United Germans"
+ BRP_brandenburg_electorate: "Brandenburg-Prussia Electorate"
+ BRP_brandenburg_electorate_desc: "§RDescription Available in 4.1.0§!"
+ BRP_protestant_beliefs: "Protestant Beliefs"
+ BRP_protestant_beliefs_desc: "§RDescription Available in 4.1.0§!"
+ BRP_national_research: "National Research"
+ BRP_national_research_desc: "§RDescription Available in 4.1.0§!"
+ BRP_reduced_noble_control: "Reduced Noble Control"
+ BRP_reduced_noble_control_desc: "§RDescription Available in 4.1.0§!"
+ BRP_german_lords: "German Lords"
+ BRP_german_lords_desc: "§RDescription Available in 4.1.0§!"
+ BRP_control_of_the_northern_trade: "Control of the Northern Trade"
+ BRP_control_of_the_northern_trade_desc: "§RDescription Available in 4.1.0§!"
+ BRP_improved_forts: "Improved Fortifications"
+ BRP_improved_forts_desc: "§RDescription Available in 4.1.0§!"
+
+ BVE_ideas: "Bremen-Verden Ideas"
+ BVE_ideas_start: "Bremen-Verden Traditions"
+ BVE_ideas_bonus: "Lower Saxon Unity" 
+ BVE_the_bremen_verden_union: "Bremen-Verden Union"
+ BVE_the_bremen_verden_union_desc: "§RDescription Available in 4.1.0§!"
+ BVE_absolute_monarchy: "Absolute Monarch"
+ BVE_absolute_monarchy_desc: "§RDescription Available in 4.1.0§!"
+ BVE_germanic_contracts: "Germanic Contracts"
+ BVE_germanic_contracts_desc: "§RDescription Available in 4.1.0§!"
+ BVE_superior_german_spies: "Superior German Spies"
+ BVE_superior_german_spies_desc: "§RDescription Available in 4.1.0§!"
+ BVE_lower_saxons: "Lower Saxons"
+ BVE_lower_saxons_desc: "§RDescription Available in 4.1.0§!"
+ BVE_honest_nobles: "Honest Nobles"
+ BVE_honest_nobles_desc: "§RDescription Available in 4.1.0§!"
+ BVE_religious_purity: "Religious Purity"
+ BVE_religious_purity_desc: "§RDescription Available in 4.1.0§!"
+
+ BRM_ideas: "Burma Ideas"
+ BRM_ideas_start: "Burma Traditions"
+ BRM_ideas_bonus: "The Silk Road"
+ BRM_legacy_of_bayinnaung: "Legacy of Bayinnaung"
+ BRM_legacy_of_bayinnaung_desc: "§RDescription Available in 4.1.0§!"
+ BRM_armada_of_burma: "Armada of Burma"
+ BRM_armada_of_burma_desc: "§RDescription Available in 4.1.0§!"
+ BRM_warfare_culture: "Warfare Culture"
+ BRM_warfare_culture_desc: "§RDescription Available in 4.1.0§!"
+ BRM_righteous_leadership: "Righteous Leadership"
+ BRM_righteous_leadership_desc: "§RDescription Available in 4.1.0§!"
+ BRM_control_of_the_silk_road: "Control of the Silk Road"
+ BRM_control_of_the_silk_road_desc: "§RDescription Available in 4.1.0§!"
+ BRM_anti_chinese_policy: "Anti-Chinese Policies"
+ BRM_anti_chinese_policy_desc: "§RDescription Available in 4.1.0§!"
+ BRM_professional_army: "Professional Army"
+ BRM_professional_army_desc: "§RDescription Available in 4.1.0§!"
+
+ CAU_ideas: "Caucasia Ideas"
+ CAU_ideas_start: "Caucasia Traditions"
+ CAU_ideas_bonus: "Empire of the Caucasus"
+ CAU_proper_policy_reforms: "Proper Policy Reforms"
+ CAU_proper_policy_reforms_desc: "§RDescription Available in 4.1.0§!"
+ CAU_raiding_armies: "Raiding Armies"
+ CAU_raiding_armies_desc: "§RDescription Available in 4.1.0§!"
+ CAU_caucasus_cultures_united: "Caucasus Cultures United"
+ CAU_caucasus_cultures_united_desc: "§RDescription Available in 4.1.0§!"
+ CAU_tax_farms: "Taxation Farms"
+ CAU_tax_farms_desc: "§RDescription Available in 4.1.0§!"
+ CAU_harsh_general_policies: "Harsh General Policies"
+ CAU_harsh_general_policies_desc: "§RDescription Available in 4.1.0§!"
+ CAU_dynastic_marriages: "Georgian Dynastic Marriages"
+ CAU_dynastic_marriages_desc: "§RDescription Available in 4.1.0§!"
+ CAU_military_police_reform: "Military Police Reform"
+ CAU_military_police_reform_desc: "§RDescription Available in 4.1.0§!"
 
  CTG_ideas: "Carthaginian Ideas"
  CTG_ideas_start: "Carthaginian Traditions"
@@ -274,9 +364,77 @@
  CIS_partisan_rear_cannons: "Partisan Rear Cannons"
  CIS_partisan_rear_cannons_desc: "§RDescription Available in 4.1.0§!"
 
+ CSA_ideas: "Confederate States Ideas"
+ CSA_ideas_start: "Confederate States Traditions"
+ CSA_ideas_bonus: "The Confederate States of America"
+ CSA_slave_trade: "Slave Trade"
+ CSA_slave_trade_desc: "§RDescription Available in 4.1.0§!"
+ CSA_war_with_america: "War With America"
+ CSA_war_with_america_desc: "§RDescription Available in 4.1.0§!"
+ CSA_the_frontier: "The Frontier"
+ CSA_the_frontier_desc: "§RDescription Available in 4.1.0§!"
+ CSA_native_manpower: "Native Manpower"
+ CSA_native_manpower_desc: "§RDescription Available in 4.1.0§!"
+ CSA_true_farms: "True Farms"
+ CSA_true_farms_desc: "§RDescription Available in 4.1.0§!"
+ CSA_american_culture: "American Culture"
+ CSA_american_culture_desc: "§RDescription Available in 4.1.0§!"
+ CSA_rising_power: "Rising Power"
+ CSA_rising_power_desc: "§RDescription Available in 4.1.0§!"
+
+ CEU_ideas: "Celtic Union Ideas"
+ CEU_ideas_start: "Celtic Union Traditions"
+ CEU_ideas_bonus: "The Celtic Union"
+ CEU_the_union_stays_strong: "The Union Stays Strong"
+ CEU_the_union_stays_strong_desc: "§RDescription Available in 4.1.0§!"
+ CEU_warborn_celts: "Warborn Celts"
+ CEU_warborn_celts_desc: "§RDescription Available in 4.1.0§!"
+ CEU_diplomatic_unity: "Diplomatic Unity"
+ CEU_diplomatic_unity_desc: "§RDescription Available in 4.1.0§!"
+ CEU_north_sea_empire_successor: "North Sea Empire Successor"
+ CEU_north_sea_empire_successor_desc: "§RDescription Available in 4.1.0§!"
+ CEU_legacy_of_vercingetorix: "Legacy of Vercingetorix"
+ CEU_legacy_of_vercingetorix_desc: "§RDescription Available in 4.1.0§!"
+ CEU_natural_born_warriors: "Natural Born Warriors"
+ CEU_natural_born_warriors_desc: "§RDescription Available in 4.1.0§!"
+ CEU_effective_tax_policy: "Effective Tax Policy"
+ CEU_effective_tax_policy_desc: "§RDescription Available in 4.1.0§!"
+
+ CHN_ideas: "China Ideas"
+ CHN_ideas_start: "China Traditions"
+ CHN_ideas_bonus: "The Republic of China"
+ CHN_jurchen_control: "Jurchen Control"
+ CHN_jurchen_control_desc: "§RDescription Available in 4.1.0§!"
+ CHN_raised_local_authority: "Raised Local Authority"
+ CHN_raised_local_authority_desc: "§RDescription Available in 4.1.0§!"
+ CHN_religious_tolerance_reforms: "Religious Tolerance Reforms"
+ CHN_religious_tolerance_reforms_desc: "§RDescription Available in 4.1.0§!"
+ CHN_chinese_overseas_possessions:  "Chinese Overseas Possessions"
+ CHN_chinese_overseas_possessions_desc: "§RDescription Available in 4.1.0§!"
+ CHN_the_republican_tradition: "The Republican Traditions"
+ CHN_the_republican_tradition_desc: "§RDescription Available in 4.1.0§!"
+ CHN_chinaware_trade_policies: "Chinaware Trade Policies"
+ CHN_chinaware_trade_policies_desc: "§RDescription Available in 4.1.0§!"
+ CHN_the_great_wall_of_china: "The Great Wall of China"
+ CHN_the_great_wall_of_china_desc: "§RDescription Available in 4.1.0§!"
+
  CZE_ideas: "Czechoslovakia Ideas"
- CZE_start: ""
- CZE_bonus: ""
+ CZE_start: "Czechoslovakia Traditions"
+ CZE_bonus: "The Czech Republic"
+ CZE_slovakian_trade_systems: "Slovakian Trade Systems"
+ CZE_slovakian_trade_systems_desc: "§RDescription Available in 4.1.0§!"
+ CZE_multi_national_kingdom: "Multi-National Kingdom"
+ CZE_multi_national_kingdom_desc: "§RDescription Available in 4.1.0§!"
+ CZE_hussite_legacy: "Hussite Legacy"
+ CZE_hussite_legacy_desc: "§RDescription Available in 4.1.0§!"
+ CZE_land_dominance: "Land Dominance"
+ CZE_land_dominance_desc: "§RDescription Available in 4.1.0§!"
+ CZE_czech_legacy: "Czech Legacy"
+ CZE_czech_legacy_desc: "§RDescription Available in 4.1.0§!"
+ CZE_improved_fortifications: "Improved Fortifications"
+ CZE_improved_fortifications_desc: "§RDescription Available in 4.1.0§!"
+ CZE_insulting_history: "Insulting History"
+ CZE_insulting_history_desc: "§RDescription Available in 4.1.0§!"
 
  DCP_ideas: "Ducal Prussia Ideas"
  DCP_start: ""
@@ -391,6 +549,24 @@
  NSE_ideas: "North Sea Empire Ideas"
  NSE_start: ""
  NSE_bonus: ""
+
+ PRC_ideas: "People's Republic of China Ideas"
+ PRC_start: "People's Republic of China Traditions"
+ PRC_bonus: "The Great Republic"
+ PRC_proper_election_cycle: "Proper Election Cycles"
+ PRC_proper_election_cycle_desc: "§RDescription Available in 4.1.0§!"
+ PRC_great_generals: "Great Chinese Generals"
+ PRC_great_generals_desc: "§RDescription Available in 4.1.0§!"
+ PRC_the_chinese_state: "The Chinese State"
+ PRC_the_chinese_state_desc: "§RDescription Available in 4.1.0§!"
+ PRC_eastern_spy_network: "Eastern Spy Network"
+ PRC_eastern_spy_network_desc: "§RDescription Available in 4.1.0§!"
+ PRC_dictatorship_styled_rule: "Dictatorship-Styled Rule"
+ PRC_dictatorship_styled_rule_desc: "§RDescription Available in 4.1.0§!"
+ PRC_lockdown_effective: "Lockdown Effective"
+ PRC_lockdown_effective_desc: "§RDescription Available in 4.1.0§!"
+ PRC_science_of_the_future: "Science of the Future"
+ PRC_science_of_the_future_desc: "§RDescription Available in 4.1.0§!"
 
  PON_ideas: "Pontus Ideas"
  PON_start: ""
