--- a/localisation/dec1_national_ability_l_english.yml
+++ b/localisation/dec1_national_ability_l_english.yml
@@ -92,7 +92,7 @@
 
  # Brandenburg-Prussia
 
- dec1_electorate_of_brandenburg_prussia: "Electorate of Brandenburg-Prussia"
+ dec1_electorate_of_brandenburg_prussia: "Brandenburg-Prussia Electorate"
 
  # Bremen-Verden
 
